--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,5 @@
 {
-    "build": {
-      "env": {
-        "PRISMA_GENERATE": "true"
-      }
-    }
-  }
+  "buildCommand": "prisma generate && next build",
+  "installCommand": "npm install",
+  "framework": "nextjs"
+}
